--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-Dört İşlem
+Dört İşlem<br /><br />
 
-<a href="LEVEL01 toplama 1+1 eldesiz.html">LEVEL01 toplama 1+1 eldesiz.html</a>
-<a href="LEVEL02 toplama 1+1 eldeli.html">LEVEL02 toplama 1+1 eldeli.html</a>
-<a href="LEVEL03 toplama 2+2.html">LEVEL03 toplama 2+2.html</a>
-<a href="LEVEL04 çarpma 1 x 1.html">LEVEL04 çarpma 1 x 1.html</a>
-<a href="LEVEL05 çarpma 2 x 1.html">LEVEL05 çarpma 2 x 1.html</a>
-<a href="LEVEL06 çarpma 3 x 1.html">LEVEL06 çarpma 3 x 1.html</a>
-<a href="LEVEL07 çarpma 3 x 2.html">LEVEL07 çarpma 3 x 2.html</a>
-<a href="LEVEL08 bölme 1 bölü 1 kalansız.html">LEVEL08 bölme 1 bölü 1 kalansız.html</a>
-<a href="LEVEL09 bölme 1 bölü 1 kalanlı.html">LEVEL09 bölme 1 bölü 1 kalanlı.html</a>
-<a href="LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız (1).html">LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız (1).html</a>
-<a href="LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız.html">LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız.html</a>
-<a href="LEVEL11 bölünen 2 bölen 1 bölüm 2 basamaklı - kalansız.html">LEVEL11 bölünen 2 bölen 1 bölüm 2 basamaklı - kalansız.html</a>
-<a href="LEVEL12 bölme 2 bölü 1 kalanlı.html">LEVEL12 bölme 2 bölü 1 kalanlı.html</a>
-<a href="LEVEL13 bölme 3 bölü 1 kalansız.html">LEVEL13 bölme 3 bölü 1 kalansız.html</a>
+<a href="LEVEL01 toplama 1+1 eldesiz.html">LEVEL01 toplama 1+1 eldesiz.html</a><br />
+<a href="LEVEL02 toplama 1+1 eldeli.html">LEVEL02 toplama 1+1 eldeli.html</a><br />
+<a href="LEVEL03 toplama 2+2.html">LEVEL03 toplama 2+2.html</a><br />
+<a href="LEVEL04 çarpma 1 x 1.html">LEVEL04 çarpma 1 x 1.html</a><br />
+<a href="LEVEL05 çarpma 2 x 1.html">LEVEL05 çarpma 2 x 1.html</a><br />
+<a href="LEVEL06 çarpma 3 x 1.html">LEVEL06 çarpma 3 x 1.html</a><br />
+<a href="LEVEL07 çarpma 3 x 2.html">LEVEL07 çarpma 3 x 2.html</a><br />
+<a href="LEVEL08 bölme 1 bölü 1 kalansız.html">LEVEL08 bölme 1 bölü 1 kalansız.html</a><br />
+<a href="LEVEL09 bölme 1 bölü 1 kalanlı.html">LEVEL09 bölme 1 bölü 1 kalanlı.html</a><br />
+<a href="LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız (1).html">LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız (1).html</a><br />
+<a href="LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız.html">LEVEL10 bölünen 2 bölen 1 bölüm 1 basamaklı - kalansız.html</a><br />
+<a href="LEVEL11 bölünen 2 bölen 1 bölüm 2 basamaklı - kalansız.html">LEVEL11 bölünen 2 bölen 1 bölüm 2 basamaklı - kalansız.html</a><br />
+<a href="LEVEL12 bölme 2 bölü 1 kalanlı.html">LEVEL12 bölme 2 bölü 1 kalanlı.html</a><br />
+<a href="LEVEL13 bölme 3 bölü 1 kalansız.html">LEVEL13 bölme 3 bölü 1 kalansız.html</a><br />
